# jetrover

./: .gitignore  README.md
docs/: M4_detection_design.md  M5_grasp_design.md  interactive_grasp_design.md
firmware/watchdog/: INTEGRATION.md  watchdog.c  watchdog.h
maps/: map_01.data  map_01.pgm  map_01.yaml  map_02.data  map_02.pgm  map_02.yaml
rviz/: jr_nav.rviz  jr_slam.rviz  jr_view.rviz
scripts/: board_reset.py  buzz.py  capture_frame.py  drive.sh  ik_probe.py  imu_watchdog.sh  jr_arm_pose.py  jr_click_viewer.py  jr_env.sh  jr_env.zsh  jr_grasp.py  record_bag.sh  save_map.sh  test_segment.py  usb_reset_board.sh  view.sh
src/: README.md
src/jr_bringup/: CMakeLists.txt  package.xml
src/jr_bringup/launch/: jr_drive.launch.py  robot.launch.py
src/jr_interfaces/: CMakeLists.txt  package.xml
src/jr_interfaces/action/: Grasp.action
src/jr_nav/: CMakeLists.txt  package.xml
src/jr_nav/launch/: nav.launch.py
src/jr_slam/: CMakeLists.txt  package.xml
src/jr_slam/config/: slam.yaml
src/jr_slam/launch/: slam.launch.py
src/jr_teleop/: package.xml  setup.cfg  setup.py
src/jr_teleop/jr_teleop/: cmd_vel_relay.py  joy_teleop.py  keyboard_teleop.py
src/jr_vision/: package.xml  setup.cfg  setup.py
src/jr_vision/jr_vision/: color_detect.py  detector.py  grasp.py  scene.py  scene_segment.py
src/jr_vision/launch/: detect.launch.py  grasp.launch.py  scene.launch.py
test_data/: cap_K.npy  cap_depth.npy
