<?xml version="1.0"?>
<package format="3">
  <name>jr_interfaces</name>
  <version>0.0.1</version>
  <description>Own action/msg/srv interfaces for JetRover (Grasp action)</description>
  <maintainer email="fanyuheng14@gmail.com">fyh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
