<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jr_nav</name>
  <version>0.0.1</version>
  <description>Clean Nav2 bringup for JetRover: calls vendor nav2 launch with our map, bridges /cmd_vel to /controller/cmd_vel. Does not modify vendor code.</description>
  <maintainer email="fanyuheng14@gmail.com">fyh</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>jr_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
