<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jr_slam</name>
  <version>0.0.1</version>
  <description>Clean 2D lidar SLAM for JetRover using slam_toolbox. Own config, does not modify vendor slam pkg.</description>
  <maintainer email="fanyuheng14@gmail.com">fyh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
